fixed issue with text align

--- a/project04/app/assets/stylesheets/articles.css.scss
+++ b/project04/app/assets/stylesheets/articles.css.scss
@@ -15,6 +15,6 @@
 	width:12em;
 }
 .dat {
-	text_align:left;
-	width: 8em;
+	text-align:left;
+	width: 7em;
 }
